# ComfyUI_IPAdapter_plus_V2

./: IPAdapterPlusV2.py  README.md  __init__.py  change_node_name.py  layer_weights_slider.py  pyproject.toml
exampleV2/: IPAdapterV1&V2.json  layer_weights_slider_example.json
examples/: IPAdapter_FaceIDv2_Kolors.json  ipadapter_advanced.json  ipadapter_clipvision_enhancer.json  ipadapter_combine_embeds.json  ipadapter_cosxl_edit.json  ipadapter_faceid.json  ipadapter_faceid_batch.json  ipadapter_ideal_faceid_config.json  ipadapter_kolors.json  ipadapter_negative_image.json  ipadapter_noise_injection.json  ipadapter_portrait.json  ipadapter_precise_composition.json  ipadapter_precise_weight_type.json  ipadapter_regional_conditioning.json  ipadapter_simple.json  ipadapter_style_composition.json  ipadapter_tiled.json  ipadapter_weight_types.json  ipadapter_weighted_embeds.json  ipadapter_weights.json
