[project]
name = "comfyui_ipadapter_plus_v2"
description = "A copy of ComfyUI_IPAdapter_plus, Only changed node name to coexist with ComfyUI_IPAdapter_plus v1 version."
version = "1.0.9"
license = "GPL-3.0 license"

[project.urls]
Repository = "https://github.com/chflame163/ComfyUI_IPAdapter_plus_V2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chflame163"
DisplayName = "ComfyUI_IPAdapter_plus_V2"
Icon = ""
